crates/gossamer-diagnostics/tests/snapshots/GL0013.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GL0013]: `!!x` collapses to `x` when `x: bool`. If the double negation is — here
--- framed ---
error[GL0013]: `!!x` collapses to `x` when `x: bool`. If the double negation is
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
