crates/gossamer-diagnostics/tests/snapshots/GL0014.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GL0014]: Assigning a variable to itself does nothing. The statement is - here
--- framed ---
error[GL0014]: Assigning a variable to itself does nothing. The statement is
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
