crates/gossamer-diagnostics/tests/snapshots/GL0015.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GL0015]: `todo!()` and `unimplemented!()` are placeholders, not shippable — here
--- framed ---
error[GL0015]: `todo!()` and `unimplemented!()` are placeholders, not shippable
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
