crates/gossamer-diagnostics/tests/snapshots/GL0018.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GL0018]: `if a { if b { ... } }` can be combined into — here
--- framed ---
error[GL0018]: `if a { if b { ... } }` can be combined into
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
