crates/gossamer-diagnostics/tests/snapshots/GL0019.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GL0019]: Both branches of the `if` are identical. Drop the branch and — here
--- framed ---
error[GL0019]: Both branches of the `if` are identical. Drop the branch and
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
