crates/gossamer-diagnostics/tests/snapshots/GL0020.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GL0020]: `Foo { x: x }` is the same as the shorthand `Foo { x }`. — here
--- framed ---
error[GL0020]: `Foo { x: x }` is the same as the shorthand `Foo { x }`.
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
