crates/gossamer-diagnostics/tests/snapshots/GL0021.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GL0021]: `if cond { return X } else { Y }` — the `else` is unreachable — here
--- framed ---
error[GL0021]: `if cond { return X } else { Y }` — the `else` is unreachable
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
