crates/gossamer-diagnostics/tests/snapshots/GL0022.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GL0022]: Comparing a value to itself is always `true` (for `==`, `<=`, — here
--- framed ---
error[GL0022]: Comparing a value to itself is always `true` (for `==`, `<=`,
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
