crates/gossamer-diagnostics/tests/snapshots/GL0023.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GL0023]: `x + 0`, `x - 0`, `x * 1`, `x / 1` all equal `x`. The operation — here
--- framed ---
error[GL0023]: `x + 0`, `x - 0`, `x * 1`, `x / 1` all equal `x`. The operation
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
