crates/gossamer-diagnostics/tests/snapshots/GL0024.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GL0024]: `let x = ()` binds the unit value, which is almost never useful. - here
--- framed ---
error[GL0024]: `let x = ()` binds the unit value, which is almost never useful.
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
